--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -26,14 +26,6 @@ msgctxt "field:account.move,wo_com_amount:"
 msgid "Amount w/o com"
 msgstr "Montant hors Commissions"
 
-msgctxt "field:account.move.breakdown,base_total:"
-msgid "Base Total"
-msgstr "Base"
-
-msgctxt "field:account.move.breakdown,commissions:"
-msgid "Commissions"
-msgstr "Commissions"
-
 msgctxt "field:broker,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -53,6 +45,10 @@ msgstr "Réseaux de Distribution"
 msgctxt "field:broker,id:"
 msgid "ID"
 msgstr " "
+
+msgctxt "field:broker,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:broker,party:"
 msgid "Party"
@@ -142,6 +138,10 @@ msgctxt "field:commission.rule,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:commission.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:commission.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -218,6 +218,10 @@ msgctxt "field:contract.invoice.commission,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.invoice.commission,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:contract.invoice.commission,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -282,6 +286,10 @@ msgctxt "field:contract.option-commission.option,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.option-commission.option,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:contract.option-commission.option,option:"
 msgid "Subscribed Option"
 msgstr "Garantie Souscrite"
@@ -337,6 +345,10 @@ msgstr "Créé par"
 msgctxt "field:contract.premium.commission,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:contract.premium.commission,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:contract.premium.commission,party:"
 msgid "Party"
@@ -413,6 +425,10 @@ msgstr "Réseau de Distribution"
 msgctxt "field:distribution.network-broker,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:distribution.network-broker,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:distribution.network-broker,rec_name:"
 msgid "Name"
