--- a/modules/contract_clause/locale/fr_FR.po
+++ b/modules/contract_clause/locale/fr_FR.po
@@ -34,6 +34,10 @@ msgctxt "field:contract.clause,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.clause,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:contract.clause,rec_name:"
 msgid "Name"
 msgstr "Nom"
