--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -157,6 +157,10 @@ msgctxt "field:billing.premium.rule,match_contract_frequency:"
 msgid "Match Contract Frequency"
 msgstr "Synchroniser avec la fréquence du contrat"
 
+msgctxt "field:billing.premium.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:billing.premium.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -248,6 +252,10 @@ msgstr "ID"
 msgctxt "field:billing.premium.rule.component,kind:"
 msgid "Line kind"
 msgstr "Type"
+
+msgctxt "field:billing.premium.rule.component,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:billing.premium.rule.component,premium_rule:"
 msgid "Premium Rule"
@@ -341,6 +349,10 @@ msgctxt "field:document.create.attach,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:document.create.attach,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:document.create.attach,name:"
 msgid "Filename"
 msgstr "Nom du Fichier"
@@ -365,6 +377,10 @@ msgctxt "field:document.create.preview,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:document.create.preview,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:document.create.preview,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -381,6 +397,10 @@ msgctxt "field:document.create.select,models:"
 msgid "Models"
 msgstr "Modèles"
 
+msgctxt "field:document.create.select,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:document.create.select,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -392,6 +412,10 @@ msgstr "Modèle de Lettre"
 msgctxt "field:document.create.select.template,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:document.create.select.template,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.create.select.template,selected:"
 msgid "Selected"
@@ -420,6 +444,10 @@ msgstr "Date de Fin"
 msgctxt "field:document.description,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:document.description,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.description,name:"
 msgid "Name"
@@ -453,6 +481,10 @@ msgctxt "field:document.receive.attach,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:document.receive.attach,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:document.receive.attach,resource:"
 msgid "Resource"
 msgstr "Ressource"
@@ -464,6 +496,10 @@ msgstr "ID"
 msgctxt "field:document.receive.request,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:document.receive.request,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.receive.request,request:"
 msgid "Request"
@@ -480,6 +516,10 @@ msgstr "Documents"
 msgctxt "field:document.receive.set_requests,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:document.receive.set_requests,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.request,create_date:"
 msgid "Create Date"
@@ -504,6 +544,10 @@ msgstr "ID"
 msgctxt "field:document.request,is_complete:"
 msgid "Is Complete"
 msgstr "Tout reçu"
+
+msgctxt "field:document.request,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.request,needed_by:"
 msgid "Requested for"
@@ -564,6 +608,10 @@ msgstr "Nécessaire Pour"
 msgctxt "field:document.request.line,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:document.request.line,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.request.line,rec_name:"
 msgid "Name"
@@ -632,6 +680,10 @@ msgstr "ID"
 msgctxt "field:document.rule,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:document.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:document.rule,offered:"
 msgid "Offered"
@@ -749,6 +801,10 @@ msgctxt "field:document.template,mail_subject:"
 msgid "eMail Subject"
 msgstr "Sujet du courrier électronique"
 
+msgctxt "field:document.template,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:document.template,name:"
 msgid "Name"
 msgstr "Nom"
@@ -764,6 +820,14 @@ msgstr "Produits"
 msgctxt "field:document.template,rec_name:"
 msgid "Name"
 msgstr "Nom"
+
+msgctxt "field:document.template,tags:"
+msgid "Tags"
+msgstr "Labels"
+
+msgctxt "field:document.template,tags_name:"
+msgid "Tags"
+msgstr "Labels"
 
 msgctxt "field:document.template,versions:"
 msgid "Versions"
@@ -929,6 +993,10 @@ msgctxt "field:expense.kind,kind:"
 msgid "Kind"
 msgstr "Type"
 
+msgctxt "field:expense.kind,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:expense.kind,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1089,6 +1157,10 @@ msgctxt "field:extra_premium.kind,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:extra_premium.kind,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:extra_premium.kind,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1124,6 +1196,10 @@ msgstr "Créé par"
 msgctxt "field:insurer,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:insurer,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:insurer,party:"
 msgid "Insurer"
@@ -1225,6 +1301,10 @@ msgctxt "field:offered.business_rule_root,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:offered.business_rule_root,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:offered.business_rule_root,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -1296,6 +1376,10 @@ msgstr "ID"
 msgctxt "field:offered.coverage_amount.rule,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:offered.coverage_amount.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.coverage_amount.rule,offered:"
 msgid "Offered"
@@ -1389,6 +1473,10 @@ msgctxt "field:offered.deductible.rule,kind:"
 msgid "Kind"
 msgstr "Type"
 
+msgctxt "field:offered.deductible.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:offered.deductible.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -1469,6 +1557,10 @@ msgctxt "field:offered.deductible.rule.duration,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:offered.deductible.rule.duration,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:offered.deductible.rule.duration,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -1508,6 +1600,10 @@ msgstr "Date de Fin"
 msgctxt "field:offered.eligibility.rule,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:offered.eligibility.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.eligibility.rule,offered:"
 msgid "Offered"
@@ -1593,6 +1689,10 @@ msgctxt "field:offered.exclusion,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:offered.exclusion,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:offered.exclusion,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1649,6 +1749,10 @@ msgctxt "field:offered.item.description,kind:"
 msgid "Kind"
 msgstr "Type"
 
+msgctxt "field:offered.item.description,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:offered.item.description,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1660,6 +1764,14 @@ msgstr "Nom"
 msgctxt "field:offered.item.description,sub_item_descs:"
 msgid "Sub Item Descriptions"
 msgstr "Descriptions des Sous Eléments"
+
+msgctxt "field:offered.item.description,tags:"
+msgid "Tags"
+msgstr "Labels"
+
+msgctxt "field:offered.item.description,tags_name:"
+msgid "Tags"
+msgstr "Labels"
 
 msgctxt "field:offered.item.description,write_date:"
 msgid "Write Date"
@@ -2144,6 +2256,10 @@ msgstr "Fréquence"
 msgctxt "field:offered.term.rule,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:offered.term.rule,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:offered.term.rule,offered:"
 msgid "Offered"
