--- a/modules/task_manager/locale/fr_FR.po
+++ b/modules/task_manager/locale/fr_FR.po
@@ -50,6 +50,10 @@ msgctxt "field:res.team,members:"
 msgid "Members"
 msgstr "Membres"
 
+msgctxt "field:res.team,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:res.team,name:"
 msgid "Name"
 msgstr "Nom"
@@ -118,6 +122,10 @@ msgctxt "field:res.team.add_user.select,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:res.team.add_user.select,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:res.team.add_user.select,user:"
 msgid "User"
 msgstr "Utilisateur"
@@ -145,6 +153,10 @@ msgstr "ID"
 msgctxt "field:res.team.priority,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:res.team.priority,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:res.team.priority,priority:"
 msgid "Priority"
@@ -181,6 +193,10 @@ msgstr "Equipe"
 msgctxt "field:task.select.available_tasks,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:task.select.available_tasks,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:task.select.available_tasks,nb_tasks_process:"
 msgid "Process Tasks"
@@ -225,6 +241,10 @@ msgstr "ID"
 msgctxt "field:task.select.available_tasks.task,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:task.select.available_tasks.task,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:task.select.available_tasks.task,nb_tasks:"
 msgid "Number"
