--- a/modules/contract_life_clause/locale/fr_FR.po
+++ b/modules/contract_life_clause/locale/fr_FR.po
@@ -23,7 +23,7 @@ msgid "Customized Beneficiary Clause"
 msgstr "Clause bénéficiare personnalisée"
 
 msgctxt "field:contract.option,has_beneficiary_clause:"
-msgid "With Beneficiary Clause"
+msgid "Has Beneficiary Clause"
 msgstr "Avec clause bénéficiaire"
 
 msgctxt "field:contract.option.beneficiary,accepting:"
@@ -49,6 +49,10 @@ msgstr "Créé par"
 msgctxt "field:contract.option.beneficiary,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:contract.option.beneficiary,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:contract.option.beneficiary,option:"
 msgid "Option"
