--- a/modules/country_cog/locale/fr_FR.po
+++ b/modules/country_cog/locale/fr_FR.po
@@ -34,6 +34,10 @@ msgctxt "field:country.zipcode,id:"
 msgid "ID"
 msgstr " "
 
+msgctxt "field:country.zipcode,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:country.zipcode,rec_name:"
 msgid "Name"
 msgstr " "
