--- a/modules/health/locale/fr_FR.po
+++ b/modules/health/locale/fr_FR.po
@@ -34,6 +34,10 @@ msgctxt "field:health.party_complement,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:health.party_complement,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:health.party_complement,party:"
 msgid "Party"
 msgstr "Acteur"
