--- a/modules/party_cog/locale/fr_FR.po
+++ b/modules/party_cog/locale/fr_FR.po
@@ -1,10 +1,16 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:party.contact_mechanism:"
 msgid "Invalid Email !"
 msgstr "e-Mail Invalide"
+
+msgctxt "error:party.party:"
+msgid ""
+"Duplicate(s) already exist(s) : \n"
+"%s"
+msgstr "Des doublons existent déjà:"
 
 msgctxt "field:country.zipcode,city:"
 msgid "City"
@@ -150,6 +156,10 @@ msgctxt "field:party.interaction,media:"
 msgid "Media"
 msgstr ""
 
+msgctxt "field:party.interaction,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:party.interaction,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -293,6 +303,10 @@ msgstr "Icône"
 msgctxt "field:party.synthesis.menu,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:party.synthesis.menu,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:party.synthesis.menu,name:"
 msgid "Name"
@@ -490,6 +504,10 @@ msgctxt "field:party.synthesis.menu.open_state,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:party.synthesis.menu.open_state,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:party.synthesis.menu.open_state,need_refresh:"
 msgid "Need Refresh"
 msgstr "Besoin de rafraichir la synthèse"
@@ -586,6 +604,10 @@ msgctxt "model:country.zipcode,name:"
 msgid "ZipCode"
 msgstr "Code Postal"
 
+msgctxt "model:ir.action,name:"
+msgid "Parties Synthesis"
+msgstr "Synthèse acteur"
+
 msgctxt "model:ir.action,name:act_address_relate_form"
 msgid "Addresses"
 msgstr "Adresses"
@@ -606,21 +628,17 @@ msgctxt "model:ir.action,name:act_menu_open"
 msgid "Open Party Synthesis Menu"
 msgstr "Ouvrir la synthèse"
 
-msgctxt "model:ir.action,name:act_party_form"
-msgid "Parties Synthesis"
-msgstr "Synthèse acteur"
-
 msgctxt "model:ir.action,name:act_person_form"
 msgid "Persons"
 msgstr "Personnes"
 
+msgctxt "model:ir.action,name:start_synthesis_menu"
+msgid "Synthesis"
+msgstr "Synthèse"
+
 msgctxt "model:ir.action,name:wizard_open"
 msgid "Open Party Synthesis Menu"
 msgstr "Ouvrir la synthèse"
-
-msgctxt "model:ir.action,name:wizard_set"
-msgid "Synthesis Menu"
-msgstr "Menu synthèse"
 
 msgctxt "model:ir.test_case.instance,name:hierarchy_test_case"
 msgid "Hierarchy Test Case"
@@ -634,13 +652,13 @@ msgctxt "model:ir.test_case.instance,name:relation_type_test_case"
 msgid "Relation Type Test Case"
 msgstr "Jeux d'essai : type de relation"
 
+msgctxt "model:ir.ui.menu,name:"
+msgid "Parties Synthesis"
+msgstr "Synthèse acteur"
+
 msgctxt "model:ir.ui.menu,name:menu_company_form"
 msgid "Companies"
 msgstr "Sociétés"
-
-msgctxt "model:ir.ui.menu,name:menu_party_form"
-msgid "Parties Synthesis"
-msgstr "Synthèse acteur"
 
 msgctxt "model:ir.ui.menu,name:menu_person_form"
 msgid "Persons"
@@ -751,12 +769,12 @@ msgid "Company"
 msgstr "Société"
 
 msgctxt "view:party.party:"
-msgid "Extra Data"
-msgstr "Données Complémentaires"
-
-msgctxt "view:party.party:"
 msgid "Contact"
 msgstr "Contact"
+
+msgctxt "view:party.party:"
+msgid "Extra Data"
+msgstr "Données Complémentaires"
 
 msgctxt "view:party.party:"
 msgid "Party Synthesis"
@@ -765,6 +783,10 @@ msgstr "Synthèse acteur"
 msgctxt "view:party.party:"
 msgid "Roles"
 msgstr "Rôles"
+
+msgctxt "view:party.party:"
+msgid "Synthesis"
+msgstr "Synthèse"
 
 msgctxt "view:party.synthesis.menu:"
 msgid "Party Synthesis Menu"
