--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -42,6 +42,10 @@ msgctxt "field:table,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
+msgctxt "field:table,dimension10:"
+msgid "Dimension 10"
+msgstr ""
+
 msgctxt "field:table,dimension1:"
 msgid "Dimension 1"
 msgstr "Dimension 1"
@@ -57,6 +61,30 @@ msgstr "Dimension 3"
 msgctxt "field:table,dimension4:"
 msgid "Dimension 4"
 msgstr "Dimension 4"
+
+msgctxt "field:table,dimension5:"
+msgid "Dimension 5"
+msgstr ""
+
+msgctxt "field:table,dimension6:"
+msgid "Dimension 6"
+msgstr ""
+
+msgctxt "field:table,dimension7:"
+msgid "Dimension 7"
+msgstr ""
+
+msgctxt "field:table,dimension8:"
+msgid "Dimension 8"
+msgstr ""
+
+msgctxt "field:table,dimension9:"
+msgid "Dimension 9"
+msgstr ""
+
+msgctxt "field:table,dimension_kind10:"
+msgid "Dimension Kind 10"
+msgstr ""
 
 msgctxt "field:table,dimension_kind1:"
 msgid "Dimension Kind 1"
@@ -74,6 +102,30 @@ msgctxt "field:table,dimension_kind4:"
 msgid "Dimension Kind 4"
 msgstr "Type Dim 4"
 
+msgctxt "field:table,dimension_kind5:"
+msgid "Dimension Kind 5"
+msgstr ""
+
+msgctxt "field:table,dimension_kind6:"
+msgid "Dimension Kind 6"
+msgstr ""
+
+msgctxt "field:table,dimension_kind7:"
+msgid "Dimension Kind 7"
+msgstr ""
+
+msgctxt "field:table,dimension_kind8:"
+msgid "Dimension Kind 8"
+msgstr ""
+
+msgctxt "field:table,dimension_kind9:"
+msgid "Dimension Kind 9"
+msgstr ""
+
+msgctxt "field:table,dimension_name10:"
+msgid "Name"
+msgstr "Nom"
+
 msgctxt "field:table,dimension_name1:"
 msgid "Name"
 msgstr "Nom"
@@ -89,6 +141,30 @@ msgstr "Nom"
 msgctxt "field:table,dimension_name4:"
 msgid "Name"
 msgstr "Nom"
+
+msgctxt "field:table,dimension_name5:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:table,dimension_name6:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:table,dimension_name7:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:table,dimension_name8:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:table,dimension_name9:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:table,dimension_order10:"
+msgid "Dimension Order 10"
+msgstr ""
 
 msgctxt "field:table,dimension_order1:"
 msgid "Dimension Order 1"
@@ -106,6 +182,26 @@ msgctxt "field:table,dimension_order4:"
 msgid "Dimension Order 4"
 msgstr "Ordre Dimension 4"
 
+msgctxt "field:table,dimension_order5:"
+msgid "Dimension Order 5"
+msgstr ""
+
+msgctxt "field:table,dimension_order6:"
+msgid "Dimension Order 6"
+msgstr ""
+
+msgctxt "field:table,dimension_order7:"
+msgid "Dimension Order 7"
+msgstr ""
+
+msgctxt "field:table,dimension_order8:"
+msgid "Dimension Order 8"
+msgstr ""
+
+msgctxt "field:table,dimension_order9:"
+msgid "Dimension Order 9"
+msgstr ""
+
 msgctxt "field:table,id:"
 msgid "ID"
 msgstr "ID"
@@ -113,6 +209,10 @@ msgstr "ID"
 msgctxt "field:table,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:table,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:table,name:"
 msgid "Name"
@@ -129,6 +229,14 @@ msgstr "Nombre de dimension"
 msgctxt "field:table,rec_name:"
 msgid "Name"
 msgstr "Nom"
+
+msgctxt "field:table,tags:"
+msgid "Tags"
+msgstr "Labels"
+
+msgctxt "field:table,tags_name:"
+msgid "Tags"
+msgstr "Labels"
 
 msgctxt "field:table,type_:"
 msgid "Type"
@@ -162,6 +270,10 @@ msgctxt "field:table.2d,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:table.2d,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:table.2d,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -186,6 +298,14 @@ msgctxt "field:table.2d.open.ask_dimensions,definition:"
 msgid "Definition"
 msgstr "Définition"
 
+msgctxt "field:table.2d.open.ask_dimensions,dimension10:"
+msgid "Dimension 10"
+msgstr ""
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension10_required:"
+msgid "Dimension %s Required"
+msgstr "Dimension %s requise"
+
 msgctxt "field:table.2d.open.ask_dimensions,dimension3:"
 msgid "Dimension 3"
 msgstr "Dimension 3"
@@ -202,9 +322,53 @@ msgctxt "field:table.2d.open.ask_dimensions,dimension4_required:"
 msgid "Dimension %s Required"
 msgstr "Dimension %s requise"
 
+msgctxt "field:table.2d.open.ask_dimensions,dimension5:"
+msgid "Dimension 5"
+msgstr ""
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension5_required:"
+msgid "Dimension %s Required"
+msgstr "Dimension %s requise"
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension6:"
+msgid "Dimension 6"
+msgstr ""
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension6_required:"
+msgid "Dimension %s Required"
+msgstr "Dimension %s requise"
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension7:"
+msgid "Dimension 7"
+msgstr ""
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension7_required:"
+msgid "Dimension %s Required"
+msgstr "Dimension %s requise"
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension8:"
+msgid "Dimension 8"
+msgstr ""
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension8_required:"
+msgid "Dimension %s Required"
+msgstr "Dimension %s requise"
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension9:"
+msgid "Dimension 9"
+msgstr ""
+
+msgctxt "field:table.2d.open.ask_dimensions,dimension9_required:"
+msgid "Dimension %s Required"
+msgstr "Dimension %s requise"
+
 msgctxt "field:table.2d.open.ask_dimensions,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:table.2d.open.ask_dimensions,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:table.cell,create_date:"
 msgid "Create Date"
@@ -222,6 +386,10 @@ msgctxt "field:table.cell,definition:"
 msgid "Definition"
 msgstr "Définition"
 
+msgctxt "field:table.cell,dimension10:"
+msgid "Dimension 10"
+msgstr ""
+
 msgctxt "field:table.cell,dimension1:"
 msgid "Dimension 1"
 msgstr "Dimension 1"
@@ -238,9 +406,33 @@ msgctxt "field:table.cell,dimension4:"
 msgid "Dimension 4"
 msgstr "Dimension 4"
 
+msgctxt "field:table.cell,dimension5:"
+msgid "Dimension 5"
+msgstr ""
+
+msgctxt "field:table.cell,dimension6:"
+msgid "Dimension 6"
+msgstr ""
+
+msgctxt "field:table.cell,dimension7:"
+msgid "Dimension 7"
+msgstr ""
+
+msgctxt "field:table.cell,dimension8:"
+msgid "Dimension 8"
+msgstr ""
+
+msgctxt "field:table.cell,dimension9:"
+msgid "Dimension 9"
+msgstr ""
+
 msgctxt "field:table.cell,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:table.cell,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:table.cell,rec_name:"
 msgid "Name"
@@ -302,6 +494,10 @@ msgctxt "field:table.dimension.value,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:table.dimension.value,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
+
 msgctxt "field:table.dimension.value,name:"
 msgid "Name"
 msgstr "Nom"
@@ -345,6 +541,10 @@ msgstr "Identifiant XML"
 msgctxt "field:table.dimension.value.open.ask_type,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:table.dimension.value.open.ask_type,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre l'arbre"
 
 msgctxt "field:table.dimension.value.open.ask_type,table:"
 msgid "Table"
@@ -438,6 +638,26 @@ msgctxt "model:table.dimension.value.open.ask_type,name:"
 msgid "Open Table Value Dimension"
 msgstr "Ouvrir la table des valeurs d'une dimension"
 
+msgctxt "selection:table,dimension_kind10:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:table,dimension_kind10:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:table,dimension_kind10:"
+msgid "Range"
+msgstr "Intervalle"
+
+msgctxt "selection:table,dimension_kind10:"
+msgid "Range-Date"
+msgstr "Intervalle de Date"
+
+msgctxt "selection:table,dimension_kind10:"
+msgid "Value"
+msgstr "Valeur"
+
 msgctxt "selection:table,dimension_kind1:"
 msgid ""
 msgstr " "
@@ -517,6 +737,114 @@ msgstr "Intervalle de Date"
 msgctxt "selection:table,dimension_kind4:"
 msgid "Value"
 msgstr "Valeur"
+
+msgctxt "selection:table,dimension_kind5:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:table,dimension_kind5:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:table,dimension_kind5:"
+msgid "Range"
+msgstr "Intervalle"
+
+msgctxt "selection:table,dimension_kind5:"
+msgid "Range-Date"
+msgstr "Intervalle de Date"
+
+msgctxt "selection:table,dimension_kind5:"
+msgid "Value"
+msgstr "Valeur"
+
+msgctxt "selection:table,dimension_kind6:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:table,dimension_kind6:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:table,dimension_kind6:"
+msgid "Range"
+msgstr "Intervalle"
+
+msgctxt "selection:table,dimension_kind6:"
+msgid "Range-Date"
+msgstr "Intervalle de Date"
+
+msgctxt "selection:table,dimension_kind6:"
+msgid "Value"
+msgstr "Valeur"
+
+msgctxt "selection:table,dimension_kind7:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:table,dimension_kind7:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:table,dimension_kind7:"
+msgid "Range"
+msgstr "Intervalle"
+
+msgctxt "selection:table,dimension_kind7:"
+msgid "Range-Date"
+msgstr "Intervalle de Date"
+
+msgctxt "selection:table,dimension_kind7:"
+msgid "Value"
+msgstr "Valeur"
+
+msgctxt "selection:table,dimension_kind8:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:table,dimension_kind8:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:table,dimension_kind8:"
+msgid "Range"
+msgstr "Intervalle"
+
+msgctxt "selection:table,dimension_kind8:"
+msgid "Range-Date"
+msgstr "Intervalle de Date"
+
+msgctxt "selection:table,dimension_kind8:"
+msgid "Value"
+msgstr "Valeur"
+
+msgctxt "selection:table,dimension_kind9:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:table,dimension_kind9:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:table,dimension_kind9:"
+msgid "Range"
+msgstr "Intervalle"
+
+msgctxt "selection:table,dimension_kind9:"
+msgid "Range-Date"
+msgstr "Intervalle de Date"
+
+msgctxt "selection:table,dimension_kind9:"
+msgid "Value"
+msgstr "Valeur"
+
+msgctxt "selection:table,dimension_order10:"
+msgid "Alphabetical"
+msgstr "Alphabétique"
+
+msgctxt "selection:table,dimension_order10:"
+msgid "Sequence"
+msgstr "Séquence"
 
 msgctxt "selection:table,dimension_order1:"
 msgid "Alphabetical"
@@ -547,6 +875,46 @@ msgid "Alphabetical"
 msgstr "Alphabétique"
 
 msgctxt "selection:table,dimension_order4:"
+msgid "Sequence"
+msgstr "Séquence"
+
+msgctxt "selection:table,dimension_order5:"
+msgid "Alphabetical"
+msgstr "Alphabétique"
+
+msgctxt "selection:table,dimension_order5:"
+msgid "Sequence"
+msgstr "Séquence"
+
+msgctxt "selection:table,dimension_order6:"
+msgid "Alphabetical"
+msgstr "Alphabétique"
+
+msgctxt "selection:table,dimension_order6:"
+msgid "Sequence"
+msgstr "Séquence"
+
+msgctxt "selection:table,dimension_order7:"
+msgid "Alphabetical"
+msgstr "Alphabétique"
+
+msgctxt "selection:table,dimension_order7:"
+msgid "Sequence"
+msgstr "Séquence"
+
+msgctxt "selection:table,dimension_order8:"
+msgid "Alphabetical"
+msgstr "Alphabétique"
+
+msgctxt "selection:table,dimension_order8:"
+msgid "Sequence"
+msgstr "Séquence"
+
+msgctxt "selection:table,dimension_order9:"
+msgid "Alphabetical"
+msgstr "Alphabétique"
+
+msgctxt "selection:table,dimension_order9:"
 msgid "Sequence"
 msgstr "Séquence"
 
@@ -603,6 +971,10 @@ msgid "Dimension 1"
 msgstr "Dimension 1"
 
 msgctxt "selection:table.dimension.value,type:"
+msgid "Dimension 10"
+msgstr ""
+
+msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 2"
 msgstr "Dimension 2"
 
@@ -613,6 +985,26 @@ msgstr "Dimension 3"
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 4"
 msgstr "Dimension 4"
+
+msgctxt "selection:table.dimension.value,type:"
+msgid "Dimension 5"
+msgstr ""
+
+msgctxt "selection:table.dimension.value,type:"
+msgid "Dimension 6"
+msgstr ""
+
+msgctxt "selection:table.dimension.value,type:"
+msgid "Dimension 7"
+msgstr ""
+
+msgctxt "selection:table.dimension.value,type:"
+msgid "Dimension 8"
+msgstr ""
+
+msgctxt "selection:table.dimension.value,type:"
+msgid "Dimension 9"
+msgstr ""
 
 msgctxt "view:table.2d.open.ask_dimensions:"
 msgid "Dimensions"
@@ -637,6 +1029,10 @@ msgstr "Dimensions"
 msgctxt "view:table:"
 msgid "Basic Table Definition"
 msgstr "Definition simple d'une table"
+
+msgctxt "view:table:"
+msgid "Dimensions"
+msgstr "Dimensions"
 
 msgctxt "view:table:"
 msgid "Table Definition"
